--- a/AIpaca_App/AppShell.xaml
+++ b/AIpaca_App/AppShell.xaml
@@ -33,7 +33,7 @@
             <ShellContent ContentTemplate="{DataTemplate views:ChallengePage}" />
         </Tab>
         <Tab Title="{x:Static resources:AppResources.setting}" Icon="nav_settings.png">
-            <ShellContent ContentTemplate="{DataTemplate views:SettingsPage}" />
+            <ShellContent ContentTemplate="{DataTemplate views:SettingsPage}" Route="SettingsPage"/>
         </Tab>
     </TabBar>
 </Shell>
