--- a/AIpaca_App/Views/Settings/LogPage.xaml
+++ b/AIpaca_App/Views/Settings/LogPage.xaml
@@ -5,7 +5,7 @@
              xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
              xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             xmlns:converters="clr-namespace:AIpaca_App.Views.Converters"
+             xmlns:converters="clr-namespace:AIpaca_App.Converters"
              BackgroundColor="{DynamicResource DefaultPageBackgroundColor}"
              Title="Log" >
 
