--- a/AIpaca_App/Views/RobotPage.xaml
+++ b/AIpaca_App/Views/RobotPage.xaml
@@ -59,8 +59,8 @@
             <!-- 번역 버튼 -->
             <Button Text="{x:Static resources:AppResources.translation}" Clicked="OnTranslationButtonClicked"  />
 
-            <!--구글 번역기-->
-            <Frame CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+            <!--구글 번역기, 가려진상태-->
+            <Frame IsVisible="False"  CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <toolkit:Expander IsExpanded="True">
                     <toolkit:Expander.Header>
                         <Label Text="{x:Static resources:AppResources.googletranslate}" FontAttributes="Bold" FontSize="Large" TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
@@ -91,8 +91,8 @@
                 </toolkit:Expander>
             </Frame>
 
-            <!--파파고-->
-            <Frame CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+            <!--파파고, 가려진상태-->
+            <Frame IsVisible="False"  CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <toolkit:Expander IsExpanded="True">
                     <toolkit:Expander.Header>
                         <Label Text="{x:Static resources:AppResources.papagotranslate}" FontAttributes="Bold" FontSize="Large" TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
@@ -107,8 +107,8 @@
                 </toolkit:Expander>
             </Frame>
 
-            <!--DeepL 번역기-->
-            <Frame CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+            <!--DeepL 번역기, 가려진상태-->
+            <Frame IsVisible="False"  CornerRadius="15" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" HasShadow="True" Padding="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <toolkit:Expander IsExpanded="True">
                     <toolkit:Expander.Header>
                         <Label Text="{x:Static resources:AppResources.deepltranslate}" FontAttributes="Bold" FontSize="Large" TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
