--- a/AIpaca_App/Views/Settings/ApiSettingPopup.xaml
+++ b/AIpaca_App/Views/Settings/ApiSettingPopup.xaml
@@ -8,93 +8,90 @@
                Color="{x:Static Colors.Transparent}"
                x:DataType="vm:ApiSettingViewModel">
 
-    <Border Padding="20" BackgroundColor="{AppThemeBinding Dark=#1c1c1c, Light=#ffffff}"  WidthRequest="300">
+    <Border Padding="20" BackgroundColor="{AppThemeBinding Dark=#1c1c1c, Light=#ffffff}">
 
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="20" />
         </Border.StrokeShape>
 
-        <VerticalStackLayout Padding="0" Spacing="10">
+        <VerticalStackLayout Padding="0" Spacing="5">
 
-            <Frame Padding="10" CornerRadius="15" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+            <Frame Padding="15" CornerRadius="15" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" >
 
                 <VerticalStackLayout Padding="0" Spacing="5">
 
                     <Label Text="GPT API 키" HorizontalOptions="Center"/>
-                    <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" Padding="5" HorizontalOptions="Center">
-                        <Label x:Name="CurrentApiKeyLabel" Text="{Binding CurrentApiKey_GPT}" HorizontalTextAlignment="Center"/>
+                    <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" Padding="5" HorizontalOptions="FillAndExpand">
+                        <Label x:Name="CurrentApiKeyLabel_GPT" Text="{Binding CurrentApiKey_GPT}" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
                     </Frame>
 
-                    <StackLayout Orientation="Horizontal" Padding="0" Spacing="8" HorizontalOptions="Center">
-                        <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" Padding="2">
-                            <Entry x:Name="GPTApiKeyEntry" Placeholder="GPT Key Here"/>
+                    <StackLayout Orientation="Horizontal" Padding="0" Spacing="8" HorizontalOptions="FillAndExpand">
+                        <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" Padding="2" HorizontalOptions="FillAndExpand">
+                            <Entry x:Name="GPTApiKeyEntry" Placeholder="GPT Key Here" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand" WidthRequest="130"/>
                         </Frame>
-
-                        <Frame CornerRadius="8"  Padding="0" BorderColor="LightSeaGreen" BackgroundColor="LightSeaGreen">
+                        <Frame CornerRadius="8"  Padding="0" BorderColor="#50cbf3" BackgroundColor="#50cbf3">
                             <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
                                 <StackLayout.Behaviors>
-                                    <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                    <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent"
                                                            PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnGPTAPISaveClicked"/>
                                 </StackLayout.Behaviors>
                                 <Label Text="Save" TextColor="{AppThemeBinding Dark=White, Light=Black}" FontSize="Small" FontAttributes="Bold" 
-                                       VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                                       VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="End"/>
                             </StackLayout>
                         </Frame>
-                        <Frame CornerRadius="8"  Padding="0" BorderColor="IndianRed" BackgroundColor="IndianRed">
+                        <Frame CornerRadius="8"  Padding="0" BorderColor="#ff0066" BackgroundColor="#ff0066">
                             <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
                                 <StackLayout.Behaviors>
                                     <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
                                                            PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnGPTAPIDeleteClicked"/>
                                 </StackLayout.Behaviors>
                                 <Label Text="Del" TextColor="{AppThemeBinding Dark=White, Light=Black}" FontSize="Small" FontAttributes="Bold" 
-                                       VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                                       VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="End"/>
                             </StackLayout>
                         </Frame>
                     </StackLayout>
-
                 </VerticalStackLayout>
             </Frame>
 
-            <Frame Padding="10" CornerRadius="15" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+            <Frame Padding="15" CornerRadius="15" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Padding="0" Spacing="5">
                     <Label Text="Gemini API 키" HorizontalOptions="Center"/>
-                    <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" Padding="5" HorizontalOptions="Center">
-                        <Label x:Name="CurrentApiKeyLabel2" Text="{Binding CurrentApiKey_Gemini}" HorizontalTextAlignment="Center"/>
+                    <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" Padding="5" HorizontalOptions="FillAndExpand">
+                        <Label x:Name="CurrentApiKeyLabel_Gemini" Text="{Binding CurrentApiKey_Gemini}" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
                     </Frame>
 
                     <StackLayout Orientation="Horizontal" Padding="0" Spacing="8" HorizontalOptions="Center">
                         <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" Padding="2">
-                            <Entry x:Name="GeminiApiKeyEntry" Placeholder="Gemini Key Here"/>
+                            <Entry x:Name="GeminiApiKeyEntry" Placeholder="Gemini Key Here" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand" WidthRequest="130"/>
                         </Frame>
 
-                        <Frame CornerRadius="8"  Padding="0" BorderColor="LightSeaGreen" BackgroundColor="LightSeaGreen">
+                        <Frame CornerRadius="8"  Padding="0" BorderColor="#50cbf3" BackgroundColor="#50cbf3">
                             <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
                                 <StackLayout.Behaviors>
                                     <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
                                                            PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnGeminiAPISaveClicked"/>
                                 </StackLayout.Behaviors>
                                 <Label Text="Save" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
-                                       FontSize="Small" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                                       FontSize="Small" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="End"/>
                             </StackLayout>
                         </Frame>
 
-                        <Frame CornerRadius="8"  Padding="0" BorderColor="IndianRed" BackgroundColor="IndianRed">
+                        <Frame CornerRadius="8"  Padding="0" BorderColor="#ff0066" BackgroundColor="#ff0066">
                             <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
                                 <StackLayout.Behaviors>
                                     <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
                                                            PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnGeminiAPIDeleteClicked"/>
                                 </StackLayout.Behaviors>
                                 <Label Text="Del" TextColor="{AppThemeBinding Dark=White, Light=Black}" FontSize="Small" FontAttributes="Bold" 
-                                       VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                                       VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="End"/>
                             </StackLayout>
                         </Frame>
-
 
                     </StackLayout>
                 </VerticalStackLayout>
             </Frame>
 
-            <StackLayout Orientation="Horizontal" Padding="0" Spacing="8" HorizontalOptions="Center">
+            <StackLayout Orientation="Horizontal" Padding="20" Spacing="5" HorizontalOptions="Center">
                 <Frame CornerRadius="8"  Padding="0" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}">
                     <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
                         <StackLayout.Behaviors>
@@ -106,7 +103,6 @@
                     </StackLayout>
                 </Frame>
             </StackLayout>
-            <Label Text="" HorizontalOptions="Center"/>
         </VerticalStackLayout>
     </Border>
 </toolkit:Popup>
