패키지 정보 입력, 로그인 기능 일부수정
윈도우 플랫폼의 출시를 위한 패키지 정보입력
로그인/회원가입의 email, userid를 id2, id로 변경

--- a/AIpaca_App/Views/Account/LoginPagePopup.xaml
+++ b/AIpaca_App/Views/Account/LoginPagePopup.xaml
@@ -13,7 +13,7 @@
         </Border.StrokeShape>
         <VerticalStackLayout Spacing="15">
             <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="LightGray" Padding="5">
-                <Entry x:Name="UsernameEntry" Placeholder="{x:Static resources:AppResources.username}"/>
+                <Entry x:Name="UsernameEntry" Placeholder="{x:Static resources:AppResources.user_id}"/>
             </Frame>
             <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="LightGray" Padding="5">
                 <Entry x:Name="PasswordEntry" Placeholder="{x:Static resources:AppResources.password}" IsPassword="True"/>
