초기 db 빌드시 그래프의 최상단에 출력되는 오류 수정
초기 db 빌드시 생성되는 데이터 중 RequestTime을 서버에서 반환받는 데이터 형식에 맞춰 수정함 (2000/1/4 에서 2000-01-01 형식)

--- a/AIpaca_App/Views/Settings/LanguageSelectionPopup.xaml
+++ b/AIpaca_App/Views/Settings/LanguageSelectionPopup.xaml
@@ -7,7 +7,8 @@
 
 
     <!-- Border를 사용하여 모서리를 둥글게 설정 -->
-    <Border Padding="20" BackgroundColor="{AppThemeBinding Dark=#1c1c1c, Light=#ffffff}" WidthRequest="300">
+    <Border Padding="20" BackgroundColor="{AppThemeBinding Dark=#1c1c1c, Light=#ffffff}" WidthRequest="
+            0">
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="20" />
         </Border.StrokeShape>
